wip: pretty frontend
